--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,4 +27,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gradle/wrapper-validation-action@v1
       - run: ./gradlew build javadocJar checkMappings mapNamedJar --stacktrace
-      - run: ./test-mod/gradlew build
+      - run: cd test-mod && ./gradlew build
