--- a/test-mod/build.gradle
+++ b/test-mod/build.gradle
@@ -24,14 +24,14 @@ repositories {
 
 // Comment out this block if you're using Chocoloom
 // Comment when using loom 0.10
-minecraft {
-	intermediaryUrl = {
-		return "https://maven.legacyfabric.net/net/fabricmc/intermediary/" + it + "/intermediary-" + it + "-v2.jar";
-	}
-}
+// minecraft {
+// 	intermediaryUrl = {
+// 		return "https://maven.legacyfabric.net/net/fabricmc/intermediary/" + it + "/intermediary-" + it + "-v2.jar";
+// 	}
+// }
 loom {
 // Uncomment when using loom 0.10
-//	setIntermediaryUrl('https://maven.legacyfabric.net/net/fabricmc/intermediary/%1$s/intermediary-%1$s-v2.jar');
+	setIntermediaryUrl('https://maven.legacyfabric.net/net/fabricmc/intermediary/%1$s/intermediary-%1$s-v2.jar');
 }
 
 dependencies {
