--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ plugins {
 def ENV = System.getenv()
 
 def minecraft_version = ENV.MC_VERSION ? ENV.MC_VERSION : "1.8.9"
-def build_number = ENV.GITHUB_ACTIONS ? buildTime() : "local"
+def build_number = buildTime()
 def yarnVersion = "${minecraft_version}+build.${build_number}"
 
 System.out.println("Preparing yarn ${yarnVersion}")
