--- a/test-mod/build.gradle
+++ b/test-mod/build.gradle
@@ -45,7 +45,7 @@ dependencies {
 	}
 
 	minecraft "com.mojang:minecraft:${minecraft_version}"
-	mappings "net.fabricmc:yarn:${minecraft_version}+build.local:v2"
+	mappings "net.fabricmc:yarn:${minecraft_version}+build." + buildTime() + ":v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 }
 
