--- a/test-mod/build.gradle
+++ b/test-mod/build.gradle
@@ -1,11 +1,13 @@
 plugins {
 	id 'fabric-loom' version "0.10-SNAPSHOT" // To use chocoloom, change the version to a commit hash
 	id 'maven-publish'
+	id 'base'
 }
 def ENV = System.getenv()
 def minecraft_version = ENV.MC_VERSION ? ENV.MC_VERSION : "1.8.9"
 def old_version = !"1.13.2 1.12.2 1.11.2 1.10.2 1.9.4 1.8.9 1.7.10".contains(minecraft_version);
 def lwjglVersion = System.getProperty("os.name").toLowerCase().contains("mac") ? "2.9.1" : "2.9.0"
+def yarn_build_number = ENV.GITHUB_ACTIONS ? buildTime() : "local"
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
@@ -13,6 +15,12 @@ targetCompatibility = JavaVersion.VERSION_1_8
 archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
+
+static def buildTime() {
+	def df = new java.text.SimpleDateFormat("yyyyMMddHHmm")
+	df.setTimeZone(TimeZone.getTimeZone("UTC"))
+	return df.format(new Date())
+}
 
 repositories {
 	mavenLocal()
@@ -45,7 +53,7 @@ dependencies {
 	}
 
 	minecraft "com.mojang:minecraft:${minecraft_version}"
-	mappings "net.fabricmc:yarn:${minecraft_version}+build.local:v2"
+	mappings "net.fabricmc:yarn:${minecraft_version}+build." + yarn_build_number + ":v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 }
 
